[gd_scene load_steps=2 format=3 uid="uid://dslot1234567"]

[ext_resource type="Script" path="res://src/ui/player_slot_ui.gd" id="1_script"]

[node name="PlayerSlotUI" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
theme_override_constants/separation = 12
script = ExtResource("1_script")

[node name="SlotNumberLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "1."
horizontal_alignment = 2

[node name="HostCrownLabel" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
visible = false
theme_override_font_sizes/font_size = 16
text = "[H]"
horizontal_alignment = 1

[node name="PlayerNameLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Empty"

[node name="ReadyIndicator" type="Label" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 2
